@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add shopitems type 'none' matching items with 'type 0'. Prevents some error
+messages in the server log.
+Andreas Kirschbaum 2009-06-17
+
 Fix monsters applying items generated from treasure lists: do not apply items
 before all treasures have been created. Without this fix applying of weapons
 did sometimes fail because the needed skill was generated after the weapon.
